<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Kalendo</string>
    <string name="action_settings">Settings</string>
    <string name="app_info">About Kalendo</string>
    <string name="list_view">List View</string>
    <string name="cal_view">Calendar View</string>
    <string name="home_view">Home View</string>
    <string name="twitter_view">Twitter View</string>
    <string name="see_twitter">View Twitter Feed</string>
    <string name="title_activity_cal">Calendar View</string>
    <string name="title_events">Events For Selected Day</string>
    <string name="title_activity_list">Upcoming Events</string>
    <string name="no_today">There are no events for today.</string>
    <string name="no_selected">There are no events for the selected day.</string>
    <string name="no_upcoming">There are no upcoming events.</string>
    <string name="show_events">Show Events</string>
    <string name="back">Back</string>
    <string name="submit">Update Twitter</string>
    <string name="twitter_prompt">Choose a Twitter Feed to View</string>
    <string-array name="twitters">
        <item>AHSRaiderFBLA</item>
        <item>FultonCoSchools</item>
        <item>RaiderSport</item>
    </string-array>

</resources>
