<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/rel_layout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE">

    <TextView
        android:id="@+id/selected_date"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/show_events"
        android:layout_alignLeft="@+id/calendar_view"
        android:layout_alignStart="@id/calendar_view"
        android:layout_alignTop="@id/show_events"
        android:layout_toLeftOf="@id/show_events"
        android:layout_toStartOf="@id/show_events"
        android:gravity="center"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="#ffffff"
        android:textSize="20sp"/>

    <Button
        android:id="@id/show_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/mybutton"
        android:onClick="toDayEvents"
        android:padding="10dp"
        android:text="@string/show_events"
        android:textColor="#000000"/>
    
    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/selected_date"
        android:padding="2dp"
        android:background="#000000"/>
    
    <CalendarView
        android:id="@id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/line"
        android:background="#EEEEEE"
        android:selectedDateVerticalBar="@drawable/vertical_bar"
        android:selectedWeekBackgroundColor="#5BCEC1"
        android:weekSeparatorLineColor="#1EBBAA"/>
		
	<LinearLayout
        android:id="@id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#343434"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/list_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/list_view"
            android:cropToPadding="false"
            android:onClick="toList"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/list"/>

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/home_view"
            android:cropToPadding="false"
            android:onClick="toHome"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/home"/>
        
        <ImageButton
            android:id="@+id/twitter_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/twitter_view"
            android:cropToPadding="false"
            android:onClick="toTwitterFeed"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/twitter"/>

        <ImageButton
            android:id="@+id/cal_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cal_view"
            android:cropToPadding="false"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/cal_on"/>
        
    </LinearLayout> 

</RelativeLayout>