<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg">
    
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/list_events"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
        </LinearLayout>
        
    </ScrollView>
    
    <LinearLayout
        android:id="@id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#343434"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/list_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/list_view"
            android:cropToPadding="false"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/list_on"/>

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/home_view"
            android:cropToPadding="false"
            android:onClick="toHome"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/home"/>
        
        <ImageButton
            android:id="@+id/twitter_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/twitter_view"
            android:cropToPadding="false"
            android:onClick="toTwitterFeed"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/twitter"/>

        <ImageButton
            android:id="@+id/cal_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cal_view"
            android:cropToPadding="false"
            android:onClick="toCal"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/cal"/>
        
    </LinearLayout>
   
</RelativeLayout>